--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:theme="@style/Theme.CRUDdatabsefirebase"
         tools:targetApi="31">
         <activity
+            android:name=".ui.activity.LightSensorActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.activity.AccelometerActivity"
             android:exported="false" />
         <activity
