--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,15 @@
         android:theme="@style/Theme.CRUDdatabsefirebase"
         tools:targetApi="31">
         <activity
+            android:name=".ui.activity.CalculationActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".ui.activity.NotificationActivity"
             android:exported="true">
             <intent-filter>
